--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Yusuke Shinohara <complex.alpha.cxa@gmail.com>"]
 python = "^3.10"
 fastapi = "^0.89.1"
 uvicorn = "^0.20.0"
+psutil = "^5.9.4"
 
 [tool.poetry.dev-dependencies]
 
